--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,10 +1,7 @@
 ---
 engines:
   duplication:
-    enabled: true
-    config:
-      languages:
-      - ruby
+    enabled: false
   fixme:
     enabled: true
   rubocop:
