Support spec name in config #11

--- a/test/fixtures/caravan-test.yml
+++ b/test/fixtures/caravan-test.yml
@@ -1,9 +1,10 @@
 ---
-src: .
-dst: specific_file_name
-debug: true
-deploy_mode: rsync
-incremental: true
-exclude:
-- ".git"
-- ".svn"
+master:
+  src: .
+  dst: specific_file_name
+  debug: true
+  deploy_mode: rsync
+  incremental: true
+  exclude:
+    - ".git"
+    - ".svn"
