--- a/docs/_data/changelog.yml
+++ b/docs/_data/changelog.yml
@@ -1,3 +1,7 @@
+- version: "1.0.0"
+  changes:
+    - text: "Multiple specs support"
+      hash: e583bb8
 - version: "0.7.0"
   changes:
     - text: "Specify caravan.yml's name"
